--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,9 @@
 3、 遮盖评论功能实现
 4、 首页链接到评论
 5、 Ckeditor解析后的html可能存在问题
+6、 last seen
+7、 关注他的人
+8、 ajax管理评论
+9、 样式问题，遮盖按钮与时间戳为同胞，都是float: left;
+    应该将评论的遮盖按钮与时间戳绑定，这样不会用户信息太长导致遮盖按钮先被挤下去
+    然而并不打算改这个bug。。要重新写CSS表。。好麻烦
